--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,8 @@ jobs:
       run: echo "head_ref - ${{ github.head_ref }}, owner - ${{github.repository_owner}}"
     - name: List runner name
       run: echo "runner os - ${{ runner.os }}"
+    - name: List file
+      run: |
+        pwd
+        ls
 
